# hbs

./: Makefile  README.md  pyproject.toml
notebooks/: 01_openai_solution.ipynb  02_open_source_embeddings.ipynb  03_fine_tuneembeddings.ipynb  HBS_retrieval_assignment.ipynb
src/: data.py  evaluation.py  fine_tuning.py  utils.py
