[tool.poetry]
name = "hbs-assesment"
version = "0.1.0"
description = ""
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
openai = "^1.36.1"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"
tiktoken = "^0.7.0"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.format.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130